# ecs

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: cmake-multi-platform.yml
docs/: API.md
include/: component.hpp  compressor.hpp  const.hpp  ecs.hpp  entity.hpp  error.hpp  types.hpp  view.hpp  view.tpp
src/: compressor.cpp  ecs.cpp  entity.cpp
test/: component.cpp  ecs.cpp  entity.cpp
